--- a/Auto Spa - Car Wash/assets/css/style.css
+++ b/Auto Spa - Car Wash/assets/css/style.css
@@ -410,11 +410,7 @@
     transform: rotateY(180deg);
 }
 
-#project-btn-2,
-#project-btn-3,
-#project-btn-4,
-#project-btn-5,
-#project-btn-6 {
+.project-btn {
     padding: 15px 27px;
     border-top: none;
     border-left: none;
@@ -424,29 +420,15 @@
     margin-bottom: 50px;
     margin-left: 10px;
     color: #bdb4b4;
-    transition: 0.2s;
-    font-size: 14.6px;
-    font-weight: 500;
-    margin-top: 20px;
-}
-
-#project-btn-1 {
-    padding: 15px 27px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    background-color: #4f9ddc;
-    border-bottom: 1px solid #e2d5d5b9;
-    margin-bottom: 50px;
-    color: white;
-    transition: 0.2s;
+    transition: all ease .3s;
     font-size: 14.6px;
     font-weight: 500;
     margin-top: 20px;
 }
 
 .project-btn:hover {
-    background-color: #1476c7;
+    background-color: #4f9ddc;
+    color: white;
 }
 
 .hover-slide-up {
@@ -1295,24 +1277,8 @@
     color: white;
 }
 
-#sm-car-btn {
-    padding: 15px 27px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    background-color: #4f9ddc;
-    border-bottom: 1px solid #e2d5d5b9;
-    margin-bottom: 50px;
-    color: #ffffff;
-    transition: 0.2s;
-    font-size: 14.6px;
-    font-weight: 400;
-    margin-top: 20px;
-}
-
-#md-car-btn,
-#lg-car-btn {
-    padding: 15px 27px;
+.srvs-car-btn {
+    padding: 12.5px 27px;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -1320,10 +1286,15 @@
     border-bottom: 1px solid #e2d5d5b9;
     margin-bottom: 50px;
     color: #4f9ddc;
-    transition: 0.2s;
+    transition: all ease .3s;
     font-size: 14.6px;
-    font-weight: 400;
+    font-weight: 500;
     margin-top: 20px;
+}
+
+.srvs-car-btn:hover {
+    background-color: #4f9ddce3;
+    color: white;
 }
 
 .vehcle-type-packages-pera {
@@ -1345,6 +1316,14 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
+}
+
+.srvc-img {
+    transition: all ease .4s;
+}
+
+.srvc-hvr:hover .srvc-img {
+    transform: rotateY(180deg);
 }
 
 /* SERVICE PAGE END */
