--- a/Auto Spa - Car Wash/assets/css/style.css
+++ b/Auto Spa - Car Wash/assets/css/style.css
@@ -2,7 +2,7 @@
 
 .bg-img-1 {
     background-image: url(../image/slider_03.jpg);
-    height: 45rem;
+    height: 38rem;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -11,7 +11,7 @@
 
 .bg-img-2 {
     background-image: url(../image/slider_02.jpg);
-    height: 45rem;
+    height: 38rem;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -20,7 +20,7 @@
 
 .bg-img-3 {
     background-image: url(../image/slider_01.jpg);
-    height: 45rem;
+    height: 38rem;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -35,11 +35,21 @@
     font-size: 1rem;
     font-weight: 400;
     letter-spacing: 2px;
+    position: relative;
+    top: 90px;
 }
 
 .slides-hdng {
     font-size: 3.5rem;
     font-weight: bold;
+    position: relative;
+    top: 90px;
+}
+
+#slider-btn {
+    height: 13px;
+    width: 13px;
+    border-radius: 100%;
 }
 
 @media (max-width: 600px) {
@@ -57,6 +67,8 @@
     background-color: transparent;
     margin-bottom: 200px;
     margin-top: 30px;
+    position: relative;
+    top: 90px;
 }
 
 .slides-btn:hover {
@@ -88,6 +100,9 @@
 .home-single-img {
     transition: 1s;
     cursor: pointer;
+    object-fit: cover;
+    object-position: center;
+    height: 450px;
 }
 
 .home-single-img:hover {
@@ -96,15 +111,19 @@
 
 @media (max-width: 1000px) {
     .home-single-img {
-        width: 200px;
-        height: 300px;
+        width: 300px;
+        height: 400px;
+        object-fit: cover;
+        object-position: center;
     }
 }
 
 @media (max-width: 740px) {
     .home-single-img {
-        width: 430px;
-        height: 500px;
+        width: 300px;
+        height: 400px;
+        object-fit: cover;
+        object-position: center;
     }
 }
 
@@ -156,9 +175,13 @@
     color: white;
 }
 
-@media (max-width: 765px) {
+@media (max-width: 600px) {
     .booking-sec button {
         margin-left: -25px;
+    }
+
+    .booking-sec span {
+        font-size: 1rem;
     }
 }
 
@@ -1327,11 +1350,11 @@
 }
 
 .srvc-img {
-    transition: all ease .4s;
+    transition: all ease .5s;
 }
 
 .srvc-hvr:hover .srvc-img {
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) scale(1.1);
 }
 
 /* SERVICE PAGE END */
